--- a/src/main/asciidoc/project/general_procedures/failure_recovery_administration.adoc
+++ b/src/main/asciidoc/project/general_procedures/failure_recovery_administration.adoc
@@ -3,7 +3,8 @@
 
 The failure recovery subsystem of {productName} will ensure that results of a transaction are applied consistently to all resources affected by the transaction, even if any of the application processes or the machine hosting them crash or lose network connectivity.
 In the case of machine (system) crash or network failure, the recovery will not take place until the system or network are restored, but the original application does not need to be restarted.
-Recovery responsibility is delegated to link:#recovery-manager[The Recovery Manager] . Recovery after failure requires that information about the transaction and the resources involved survives the failure and is accessible afterward: this information is held in the `ActionStore`, which is part of the `ObjectStore`.
+Recovery responsibility is delegated to link:#recovery-manager[The Recovery Manager].
+Recovery after failure requires that information about the transaction and the resources involved survives the failure and is accessible afterward: this information is held in the `ActionStore`, which is part of the `ObjectStore`.
 
 [WARNING]
 ====
@@ -14,7 +15,7 @@ Until the recovery procedures are complete, resources affected by a transaction 
 For database resources, this may be reported as tables or rows held by “in-doubt transactions”.
 For _TransactionalObjects for Java_ resources, an attempt to activate the `Transactional Object` (as when trying to get a lock) will fail.
 
-[[_recovery_manager]]
+[[recovery-manager]]
 == The Recovery Manager
 
 The failure recovery subsystem of {productName} requires that the stand-alone Recovery Manager process be running for each `ObjectStore` (typically one for each node on the network that is running {productName} applications).
@@ -27,7 +28,7 @@ To start the Recovery Manager issue the following command:
 java com.arjuna.ats.arjuna.recovery.RecoveryManager
 ----
 
-If the `-test` flag is used with the Recovery Manager then it will display a `Ready` message when initialized, i.e.,
+If the `-test` flag is used with the Recovery Manager then it will display a `Ready` message when initialized, i.e.:
 
 [source,shell]
 ----
@@ -40,9 +41,9 @@ java com.arjuna.ats.arjuna.recovery.RecoveryManager -test
 The `RecoveryManager` reads the properties defined in the `jbossts-properties.xml` file.
 
 A default version of `jbossts-properties.xml` is supplied with the distribution.
-This can be used without modification, except possibly the debug tracing fields, as shown in <<jts_recovery_manager_output>>.
+This can be used without modification, except possibly the debug tracing fields, as shown in <<recovery_manager_output>>.
 
-[[jts_recovery_manager_output]]
+[[recovery_manager_output]]
 == Output
 
 It is likely that installations will want to have some form of output from the `RecoveryManager`, to provide a record of what recovery activity has taken place.
@@ -75,6 +76,7 @@ These recovery modules are instances of classes that implement the `com.arjuna.a
 Each module has responsibility for a particular category of transaction or resource.
 The set of recovery modules used is dynamically loaded, using properties found in the `RecoveryManager` property file.
 
+// Rewrite this as a procedure
 The interface has two methods: `periodicWorkFirstPass` and `periodicWorkSecondPass`.
 At an interval defined by property `com.arjuna.ats.arjuna.recovery.periodicRecoveryPeriod`, the `RecoveryManager` calls the first pass method on each property, then waits for a brief period, defined by property `com.arjuna.ats.arjuna.recovery.recoveryBackoffPeriod`.
 Next, it calls the second pass of each module.
@@ -112,7 +114,7 @@ The default Recovery Extension settings are:
 
 [source,xml]
 ----
-include::{projectSourceDir}/jts/extras/default_recovery_extension_settings.xml[]
+include::{projectSourceDir}/general_procedures/extras/default_recovery_extension_settings.xml[]
 ----
 
 == Expired Entry Removal
@@ -140,5 +142,5 @@ The Expiry Scanner properties for these are:
 
 [source,xml]
 ----
-include::{projectSourceDir}/jts/extras/expiry_scanner_properties.xml[]
+include::{projectSourceDir}/general_procedures/extras/expiry_scanner_properties.xml[]
 ----
